[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://UI/StartScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/EndScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/AboutScreen.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="StartScreen" parent="UILayer" instance=ExtResource( 2 )]

[node name="HUD" parent="UILayer" instance=ExtResource( 3 )]
visible = false

[node name="EndScreen" parent="UILayer" instance=ExtResource( 4 )]
visible = false

[node name="AboutScreen" parent="UILayer" instance=ExtResource( 5 )]
visible = false

[connection signal="about_button_pressed" from="UILayer/StartScreen" to="." method="_on_StartScreen_about_button_pressed"]
[connection signal="start_button_pressed" from="UILayer/StartScreen" to="." method="_on_StartScreen_start_button_pressed"]
[connection signal="play_again_selected" from="UILayer/EndScreen" to="." method="_on_EndScreen_play_again_selected"]
[connection signal="return_to_title_selected" from="UILayer/EndScreen" to="." method="_on_EndScreen_return_to_title_selected"]
[connection signal="return_to_title_selected" from="UILayer/AboutScreen" to="." method="_on_AboutScreen_return_to_title_selected"]
